// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditQuestion render test question is NOT null 1`] = `
<div>
  <UNDEFINED
    description="content"
    index={false}
    language="en"
    title="title"
  />
  <UNDEFINED />
</div>
`;

exports[`EditQuestion render test question is null 1`] = `
<div>
  <UNDEFINED
    index={false}
    language="en"
    title="Edit question"
  />
  <UNDEFINED />
</div>
`;

exports[`EditQuestion render test questionLoading is falsy 1`] = `
<div>
  <UNDEFINED
    description="content"
    index={false}
    language="en"
    title="title"
  />
  <UNDEFINED
    form="app/AskQuestion/EDIT_QUESTION_FORM"
    formTitle="Edit question"
    question={
      Object {
        "content": "content",
        "title": "title",
      }
    }
    questionid={1}
    sendQuestion={[Function]}
    submitButtonId="app_AskQuestion_EDIT_QUESTION_BUTTON"
    submitButtonName="Save"
  />
</div>
`;

exports[`EditQuestion render test questionLoading is true 1`] = `
<div>
  <UNDEFINED
    description="content"
    index={false}
    language="en"
    title="title"
  />
  <UNDEFINED />
</div>
`;
